// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chicken component: ChickenRenderer test ChickenRenderer should render correctly when no stats yet 1`] = `
<ScrollView>
  <Button
    onPress={[Function]}
    title="Edit Chicken"
  />
  <Component
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginTop": 20,
      }
    }
  >
    <Icon
      allowFontScaling={false}
      color="lightgrey"
      name="ios-arrow-back"
      onPress={[Function]}
      size={12}
      style={
        Object {
          "fontSize": 50,
          "paddingLeft": 10,
        }
      }
    />
    <Image
      source={
        Object {
          "uri": "https://firebasestorage.googleapis.com/v0/b/cluckr-prod.appspot.com/o/uploads%2Fuser%3AvEFMHqRcozMSriuqeJNKlCXnGMr2%2Fflock%3Aflock1%2F1BD434AA-4A5D-40A9-A97A-C3D64FC8B841.jpeg?alt=media&token=029f7593-9ed3-481e-8dc6-5d3c38844180",
        }
      }
      style={
        Object {
          "height": 200,
          "width": 200,
        }
      }
    />
    <Icon
      allowFontScaling={false}
      color="grey"
      name="ios-arrow-forward"
      onPress={[Function]}
      size={12}
      style={
        Object {
          "fontSize": 50,
          "paddingRight": 10,
        }
      }
    />
  </Component>
  <Component
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-evenly",
        "padding": 10,
      }
    }
  >
    <Component>
      <Component
        style={
          Object {
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        Name:
      </Component>
      <Component
        style={
          Object {
            "fontSize": 16,
          }
        }
      >
        Chicken1
      </Component>
      <Component
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "bold",
            },
            Object {
              "paddingTop": 10,
            },
          ]
        }
      >
        Hatched On:
      </Component>
      <Component
        style={
          Object {
            "fontSize": 16,
          }
        }
      >
        2016-10-05
      </Component>
    </Component>
    <Component>
      <Component
        style={
          Object {
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        Breed:
      </Component>
      <Component
        style={
          Object {
            "fontSize": 16,
          }
        }
      >
        Cuckoo Maran
      </Component>
    </Component>
  </Component>
</ScrollView>
`;

exports[`Chicken component: ChickenRenderer test ChickenRenderer should render correctly when no weight yet 1`] = `
<ScrollView>
  <Button
    onPress={[Function]}
    title="Edit Chicken"
  />
  <Component
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginTop": 20,
      }
    }
  >
    <Icon
      allowFontScaling={false}
      color="lightgrey"
      name="ios-arrow-back"
      onPress={[Function]}
      size={12}
      style={
        Object {
          "fontSize": 50,
          "paddingLeft": 10,
        }
      }
    />
    <Image
      source={
        Object {
          "uri": "https://firebasestorage.googleapis.com/v0/b/cluckr-prod.appspot.com/o/uploads%2Fuser%3AvEFMHqRcozMSriuqeJNKlCXnGMr2%2Fflock%3Aflock1%2F1BD434AA-4A5D-40A9-A97A-C3D64FC8B841.jpeg?alt=media&token=029f7593-9ed3-481e-8dc6-5d3c38844180",
        }
      }
      style={
        Object {
          "height": 200,
          "width": 200,
        }
      }
    />
    <Icon
      allowFontScaling={false}
      color="grey"
      name="ios-arrow-forward"
      onPress={[Function]}
      size={12}
      style={
        Object {
          "fontSize": 50,
          "paddingRight": 10,
        }
      }
    />
  </Component>
  <Component
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-evenly",
        "padding": 10,
      }
    }
  >
    <Component>
      <Component
        style={
          Object {
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        Name:
      </Component>
      <Component
        style={
          Object {
            "fontSize": 16,
          }
        }
      >
        Chicken1
      </Component>
      <Component
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "bold",
            },
            Object {
              "paddingTop": 10,
            },
          ]
        }
      >
        Hatched On:
      </Component>
      <Component
        style={
          Object {
            "fontSize": 16,
          }
        }
      >
        2016-10-05
      </Component>
    </Component>
    <Component>
      <Component
        style={
          Object {
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        Breed:
      </Component>
      <Component
        style={
          Object {
            "fontSize": 16,
          }
        }
      >
        Cuckoo Maran
      </Component>
    </Component>
  </Component>
  <Component>
    <Component
      style={
        Object {
          "fontSize": 16,
          "fontWeight": "bold",
        }
      }
    >
      Total Eggs:
    </Component>
    <Component
      style={
        Object {
          "fontSize": 16,
        }
      }
    >
      1
    </Component>
    <Component
      style={
        Array [
          Object {
            "fontSize": 16,
            "fontWeight": "bold",
          },
          Object {
            "paddingTop": 10,
          },
        ]
      }
    >
      Heaviest Egg:
    </Component>
    <Component
      style={
        Object {
          "fontSize": 16,
        }
      }
    />
    <Component
      style={
        Object {
          "fontSize": 16,
        }
      }
    />
    <Component
      style={
        Array [
          Object {
            "fontSize": 16,
            "fontWeight": "bold",
          },
          Object {
            "paddingTop": 10,
          },
        ]
      }
    >
      Longest Streak:
    </Component>
    <Component
      style={
        Object {
          "fontSize": 16,
        }
      }
    >
      0
    </Component>
    <Component
      style={
        Array [
          Object {
            "fontSize": 16,
            "fontWeight": "bold",
          },
          Object {
            "paddingTop": 10,
          },
        ]
      }
    >
      Last 7 Days:
    </Component>
    <Component
      style={
        Object {
          "fontSize": 16,
        }
      }
    >
      {
  "2018-10-06": 1
}
    </Component>
  </Component>
</ScrollView>
`;

exports[`Chicken component: ChickenRenderer test ChickenRenderer should render correctly with all stats available 1`] = `
<ScrollView>
  <Button
    onPress={[Function]}
    title="Edit Chicken"
  />
  <Component
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginTop": 20,
      }
    }
  >
    <Icon
      allowFontScaling={false}
      color="lightgrey"
      name="ios-arrow-back"
      onPress={[Function]}
      size={12}
      style={
        Object {
          "fontSize": 50,
          "paddingLeft": 10,
        }
      }
    />
    <Image
      source={
        Object {
          "uri": "https://firebasestorage.googleapis.com/v0/b/cluckr-prod.appspot.com/o/uploads%2Fuser%3AvEFMHqRcozMSriuqeJNKlCXnGMr2%2Fflock%3Aflock1%2F1BD434AA-4A5D-40A9-A97A-C3D64FC8B841.jpeg?alt=media&token=029f7593-9ed3-481e-8dc6-5d3c38844180",
        }
      }
      style={
        Object {
          "height": 200,
          "width": 200,
        }
      }
    />
    <Icon
      allowFontScaling={false}
      color="grey"
      name="ios-arrow-forward"
      onPress={[Function]}
      size={12}
      style={
        Object {
          "fontSize": 50,
          "paddingRight": 10,
        }
      }
    />
  </Component>
  <Component
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-evenly",
        "padding": 10,
      }
    }
  >
    <Component>
      <Component
        style={
          Object {
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        Name:
      </Component>
      <Component
        style={
          Object {
            "fontSize": 16,
          }
        }
      >
        Chicken1
      </Component>
      <Component
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "bold",
            },
            Object {
              "paddingTop": 10,
            },
          ]
        }
      >
        Hatched On:
      </Component>
      <Component
        style={
          Object {
            "fontSize": 16,
          }
        }
      >
        2016-10-05
      </Component>
    </Component>
    <Component>
      <Component
        style={
          Object {
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        Breed:
      </Component>
      <Component
        style={
          Object {
            "fontSize": 16,
          }
        }
      >
        Cuckoo Maran
      </Component>
    </Component>
  </Component>
  <Component>
    <Component
      style={
        Object {
          "fontSize": 16,
          "fontWeight": "bold",
        }
      }
    >
      Total Eggs:
    </Component>
    <Component
      style={
        Object {
          "fontSize": 16,
        }
      }
    >
      1
    </Component>
    <Component
      style={
        Array [
          Object {
            "fontSize": 16,
            "fontWeight": "bold",
          },
          Object {
            "paddingTop": 10,
          },
        ]
      }
    >
      Heaviest Egg:
    </Component>
    <Component
      style={
        Object {
          "fontSize": 16,
        }
      }
    >
      88.1
    </Component>
    <Component
      style={
        Object {
          "fontSize": 16,
        }
      }
    >
      2017-04-02
    </Component>
    <Component
      style={
        Array [
          Object {
            "fontSize": 16,
            "fontWeight": "bold",
          },
          Object {
            "paddingTop": 10,
          },
        ]
      }
    >
      Longest Streak:
    </Component>
    <Component
      style={
        Object {
          "fontSize": 16,
        }
      }
    >
      0
    </Component>
    <Component
      style={
        Array [
          Object {
            "fontSize": 16,
            "fontWeight": "bold",
          },
          Object {
            "paddingTop": 10,
          },
        ]
      }
    >
      Last 7 Days:
    </Component>
    <Component
      style={
        Object {
          "fontSize": 16,
        }
      }
    >
      {
  "2018-10-06": 1
}
    </Component>
  </Component>
</ScrollView>
`;

exports[`Chicken component: Should render correctly when chicken ID passed in 1`] = `
<ChickenRenderer
  chicken={
    Object {
      "breed": "Cuckoo Maran",
      "hatched": "2016-10-05",
      "name": "Chicken1",
      "photoPath": "uploads/user:user1/flock:flock1/1BD434AA-4A5D-40A9-A97A-C3D64FC8B841.jpeg",
      "photoUrl": "https://firebasestorage.googleapis.com/v0/b/cluckr-prod.appspot.com/o/uploads%2Fuser%3AvEFMHqRcozMSriuqeJNKlCXnGMr2%2Fflock%3Aflock1%2F1BD434AA-4A5D-40A9-A97A-C3D64FC8B841.jpeg?alt=media&token=029f7593-9ed3-481e-8dc6-5d3c38844180",
      "thumbnailPath": "uploads/user:user1/flock:flock1/thumb_1BD434AA-4A5D-40A9-A97A-C3D64FC8B841.jpeg",
      "thumbnailUrl": "https://firebasestorage.googleapis.com/v0/b/cluckr-prod.appspot.com/o/uploads%2Fuser%3AvEFMHqRcozMSriuqeJNKlCXnGMr2%2Fflock%3Aflock1%2Fthumb_1BD434AA-4A5D-40A9-A97A-C3D64FC8B841.jpeg?alt=media&token=689dfae8-c034-46ae-9984-db5c4ee3fe72",
    }
  }
  chickenId="chicken1"
  navigation={
    Object {
      "getParam": [MockFunction] {
        "calls": Array [
          Array [
            "chickenId",
            "NO-ID",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": "chicken1",
          },
        ],
      },
    }
  }
  nextChickenId="chicken2"
  prevChickenId={null}
  stats={
    Object {
      "heaviest": Object {
        "chickenId": "chicken1",
        "chickenName": "Chicken1",
        "date": "2018-02-13",
        "modified": "2018-02-13T13:45:46.640Z",
        "userId": "user1",
        "weight": "73.5",
      },
      "lastSevenDays": Object {
        "2018-05-09": 1,
        "2018-05-10": 0,
        "2018-05-11": 1,
        "2018-05-12": 1,
        "2018-05-13": 1,
        "2018-05-14": 0,
        "2018-05-15": 0,
      },
      "longestStreak": 10,
      "total": 78,
    }
  }
/>
`;

exports[`Chicken component: Should render correctly when chicken not found 1`] = `
<Component>
  Chicken with ID chicken5 not found
</Component>
`;

exports[`Chicken component: Should render correctly when no chicken ID passed in 1`] = `
<Component>
  No Chicken ID passed in!
</Component>
`;
